MYZ-7147 fix overflow

--- a/src/components/slideshow/z-slideshow/styles.css
+++ b/src/components/slideshow/z-slideshow/styles.css
@@ -42,6 +42,7 @@ main .scroll.right {
   flex-wrap: wrap;
   transition: all 300ms;
   line-height: 0px;
+  overflow-y: hidden;
 }
 
 footer {
